--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -13,15 +13,18 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/note_icon_content_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/noteTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/noteTextView"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_document"
-        tools:ignore="RtlHardcoded" />
+        app:srcCompat="@drawable/ic_document" />
 
     <TextView
         android:id="@+id/noteTextView"
@@ -30,6 +33,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="72dp"
         android:layout_marginRight="16dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -39,7 +44,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/noteIconImageView"
-        tools:ignore="RtlHardcoded" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/noteIconImageView" />
 
 </android.support.constraint.ConstraintLayout>
