--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,16 +27,31 @@
     <!--<color name="divider">#BDBDBD</color>-->
 
     <!-- Blue Grey/Grey Colors -->
-    <color name="colorPrimary">#263238</color>
-    <color name="colorPrimaryDark">#000a12</color>
-    <color name="colorPrimaryLight">#4f5b62</color>
-    <color name="colorAccent">#9e9e9e</color>
+    <!--<color name="colorPrimary">#263238</color>-->
+    <!--<color name="colorPrimaryDark">#000a12</color>-->
+    <!--<color name="colorPrimaryLight">#4f5b62</color>-->
+    <!--<color name="colorAccent">#9e9e9e</color>-->
+    <!--<color name="colorSecondary">#f44336</color>-->
+    <!--<color name="colorSecondaryDark">#ba000d</color>-->
+    <!--<color name="colorSecondaryLight">#ff7961</color>-->
+    <!--<color name="colorPrimaryText">#ffffff</color>-->
+    <!--<color name="colorSecondaryTex">#ffffff</color>-->
+    <!--<color name="icons">#FFFFFF</color>-->
+    <!--<color name="divider">#BDBDBD</color>-->
+
+    <!-- Green/Red Colors -->
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorPrimaryLight">#C8E6C9</color>
+    <color name="colorAccent">#f44336</color>
     <color name="colorSecondary">#f44336</color>
     <color name="colorSecondaryDark">#ba000d</color>
     <color name="colorSecondaryLight">#ff7961</color>
-    <color name="colorPrimaryText">#ffffff</color>
+    <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryTex">#ffffff</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="green">#4CAF50</color>
 
 </resources>
