Note list item icon changed, used NotesCursorAdapter to customize the list items in next releases.

--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -24,7 +24,7 @@
         app:layout_constraintRight_toLeftOf="@+id/noteTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_note" />
+        app:srcCompat="@drawable/lead_pencil" />
 
     <TextView
         android:id="@+id/noteTextView"
