--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/action_delete"
+        android:contentDescription="@string/action_delete_content_description"
         android:icon="@drawable/ic_delete"
         android:orderInCategory="100"
         android:title="@string/action_delete_note"
