--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="101"
         android:title="@string/action_delete_all_notes"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="102"
+        android:title="@string/action_about"
+        app:showAsAction="never" />
 </menu>
